[package]
name = "BlockStartArb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
ethers = { version = "1.0.2", features = ["ws", "rustls"] }
deadpool-sqlite = "0.5.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.25"
petgraph = {version = "0.6.2", features =["stable_graph"] }
anyhow = "1.0.68"
thiserror = "1.0.38"
rusqlite = { version = "0.28.0", features = ["bundled"] }
dotenv = "0.15.0"
async-trait = "0.1.61"
lazy_static = "1.4.0"
rustc-hash = "1.1.0"
fc-rpc-core = { version = "1.1.0-dev", git = "https://github.com/paritytech/frontier", branch = "master" }

[profile.release]
lto = "thin"